{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 34,
  "lineage": "1099fe95-cbee-c82e-8407-f16fbb4a409d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sudoku_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0612ccf9eed0b3071",
            "domain": "vpc",
            "id": "eipalloc-04b6d1919c655fd4f",
            "instance": "i-00267d2d2418ccd3c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06f5127efef0b38b0",
            "private_dns": "ip-10-0-6-212.ec2.internal",
            "private_ip": "10.0.6.212",
            "public_dns": "ec2-34-200-172-111.compute-1.amazonaws.com",
            "public_ip": "34.200.172.111",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "automation": "terraform",
              "automation.config": "sudoku/terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sudoku",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a82127206c2824a1",
            "arn": "arn:aws:ec2:us-east-1:795740913251:instance/i-00267d2d2418ccd3c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00267d2d2418ccd3c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.medium",
            "ipv6_address_count": 0,
            "key_name": "default-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06f5127efef0b38b0",
            "private_dns": "ip-10-0-6-212.ec2.internal",
            "private_ip": "10.0.6.212",
            "public_dns": "ec2-34-200-172-111.compute-1.amazonaws.com",
            "public_ip": "34.200.172.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:795740913251:key/a5083aa9-4ba7-4c2f-9a8e-3c7c47b18e47",
                "throughput": 125,
                "volume_id": "vol-08e043bda33d701ff",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6913a89c215350d",
            "tags": {
              "Name": "sudoku"
            },
            "tags_all": {
              "Name": "sudoku",
              "automation": "terraform",
              "automation.config": "sudoku/terraform"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "sudoku"
            },
            "vpc_security_group_ids": [
              "sg-0651d781d8f58fb54"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_security_group.sg_sudoku"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_sudoku",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795740913251:security-group/sg-0651d781d8f58fb54",
            "description": "Access for ftp instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0651d781d8f58fb54",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "47.227.66.10/32",
                  "174.202.71.24/32",
                  "198.102.151.243/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sudoku",
            "name_prefix": "",
            "owner_id": "795740913251",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "automation": "terraform",
              "automation.config": "sudoku/terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-040d73a61757dd46b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795740913251:internet-gateway/igw-07bef9b63c82a57f2",
            "id": "igw-07bef9b63c82a57f2",
            "owner_id": "795740913251",
            "tags": {
              "Name": "sudoku_vpc"
            },
            "tags_all": {
              "Name": "sudoku_vpc",
              "automation": "terraform",
              "automation.config": "sudoku/terraform"
            },
            "vpc_id": "vpc-040d73a61757dd46b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07bef9b63c82a57f2",
            "id": "r-rtb-04dcae8397e22322e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04dcae8397e22322e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795740913251:route-table/rtb-0eed4e1cdd148082f",
            "id": "rtb-0eed4e1cdd148082f",
            "owner_id": "795740913251",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sudoku_vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "sudoku_vpc-private-us-east-1a",
              "automation": "terraform",
              "automation.config": "sudoku/terraform"
            },
            "vpc_id": "vpc-040d73a61757dd46b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795740913251:route-table/rtb-06e526827d6c3845d",
            "id": "rtb-06e526827d6c3845d",
            "owner_id": "795740913251",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sudoku_vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "sudoku_vpc-private-us-east-1b",
              "automation": "terraform",
              "automation.config": "sudoku/terraform"
            },
            "vpc_id": "vpc-040d73a61757dd46b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795740913251:route-table/rtb-028756ad3d09cd4ed",
            "id": "rtb-028756ad3d09cd4ed",
            "owner_id": "795740913251",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sudoku_vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "sudoku_vpc-private-us-east-1c",
              "automation": "terraform",
              "automation.config": "sudoku/terraform"
            },
            "vpc_id": "vpc-040d73a61757dd46b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795740913251:route-table/rtb-04dcae8397e22322e",
            "id": "rtb-04dcae8397e22322e",
            "owner_id": "795740913251",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07bef9b63c82a57f2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sudoku_vpc-public"
            },
            "tags_all": {
              "Name": "sudoku_vpc-public",
              "automation": "terraform",
              "automation.config": "sudoku/terraform"
            },
            "vpc_id": "vpc-040d73a61757dd46b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd3aa799bbd687a8",
            "route_table_id": "rtb-0eed4e1cdd148082f",
            "subnet_id": "subnet-031f3331d1755bf2f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9785cf439865bfb",
            "route_table_id": "rtb-06e526827d6c3845d",
            "subnet_id": "subnet-0845f38ab224d7644"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca72b1da816a6d2c",
            "route_table_id": "rtb-028756ad3d09cd4ed",
            "subnet_id": "subnet-09e9e3b860be858e3"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d9cd780790f9a6f",
            "route_table_id": "rtb-04dcae8397e22322e",
            "subnet_id": "subnet-026f8841be69cb761"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c2dbf4e0daf90e7",
            "route_table_id": "rtb-04dcae8397e22322e",
            "subnet_id": "subnet-07098c0ce6ad666b3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028cc97d8a6d4f87e",
            "route_table_id": "rtb-04dcae8397e22322e",
            "subnet_id": "subnet-0c6913a89c215350d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795740913251:subnet/subnet-031f3331d1755bf2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-031f3331d1755bf2f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "795740913251",
            "tags": {
              "Name": "sudoku_vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "sudoku_vpc-private-us-east-1a",
              "automation": "terraform",
              "automation.config": "sudoku/terraform"
            },
            "vpc_id": "vpc-040d73a61757dd46b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795740913251:subnet/subnet-0845f38ab224d7644",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0845f38ab224d7644",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "795740913251",
            "tags": {
              "Name": "sudoku_vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "sudoku_vpc-private-us-east-1b",
              "automation": "terraform",
              "automation.config": "sudoku/terraform"
            },
            "vpc_id": "vpc-040d73a61757dd46b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795740913251:subnet/subnet-09e9e3b860be858e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-09e9e3b860be858e3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "795740913251",
            "tags": {
              "Name": "sudoku_vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "sudoku_vpc-private-us-east-1c",
              "automation": "terraform",
              "automation.config": "sudoku/terraform"
            },
            "vpc_id": "vpc-040d73a61757dd46b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795740913251:subnet/subnet-026f8841be69cb761",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-026f8841be69cb761",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "795740913251",
            "tags": {
              "Name": "sudoku_vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "sudoku_vpc-public-us-east-1a",
              "automation": "terraform",
              "automation.config": "sudoku/terraform"
            },
            "vpc_id": "vpc-040d73a61757dd46b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795740913251:subnet/subnet-07098c0ce6ad666b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-07098c0ce6ad666b3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "795740913251",
            "tags": {
              "Name": "sudoku_vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "sudoku_vpc-public-us-east-1b",
              "automation": "terraform",
              "automation.config": "sudoku/terraform"
            },
            "vpc_id": "vpc-040d73a61757dd46b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795740913251:subnet/subnet-0c6913a89c215350d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0c6913a89c215350d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "795740913251",
            "tags": {
              "Name": "sudoku_vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "sudoku_vpc-public-us-east-1c",
              "automation": "terraform",
              "automation.config": "sudoku/terraform"
            },
            "vpc_id": "vpc-040d73a61757dd46b"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795740913251:vpc/vpc-040d73a61757dd46b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c130c6bb9c647aa",
            "default_route_table_id": "rtb-06c3497156b1e61fe",
            "default_security_group_id": "sg-0489e13eeb7592c3f",
            "dhcp_options_id": "dopt-402d263a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-040d73a61757dd46b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06c3497156b1e61fe",
            "owner_id": "795740913251",
            "tags": {
              "Name": "sudoku_vpc"
            },
            "tags_all": {
              "Name": "sudoku_vpc",
              "automation": "terraform",
              "automation.config": "sudoku/terraform"
            }
          }
        }
      ]
    }
  ]
}